administrator -- Auto Commit - Changes made through Frontend Interface

--- a/app/homeStyle.customCSS.css
+++ b/app/homeStyle.customCSS.css
@@ -769,7 +769,7 @@ button.inline-edit {
     }
     
     [data-view="sidePanelInfoDetail"]:last-child:before {
-        display: none;
+        border-color: white;
     }
     
     [data-view="sidePanelInfoDetail"]:after {
