--- a/app/homeStyle.customCSS.css
+++ b/app/homeStyle.customCSS.css
@@ -759,6 +759,24 @@ button.inline-edit {
 
 .target-story{
     
+    
+    [data-view="storyPageContent"] h1 {
+        font-size: 55px;
+        position: relative;
+        left: -50px;
+        color: #2196f3;
+        
+        &>strong {
+            font-weight: 100;
+            font-size: 30px;
+            color:#3f3c3b;
+        }
+    }
+
+
+    
+    
+    
     [data-view="sidePanelInfoDetail"]:before {
         position: absolute;
         content: "";
