--- a/app/homeStyle.customCSS.css
+++ b/app/homeStyle.customCSS.css
@@ -837,10 +837,11 @@ button.inline-edit {
         font-size: 17px;
         font-weight: 100;
         padding: 10px 0;
-        margin-bottom: 50px;
+        margin-bottom: 20px;
         
         &.empty{
-            display:none;
+            font-size: 0;
+            margin-bottom: 0;
         }
         
     }
