--- a/app/homeStyle.customCSS.css
+++ b/app/homeStyle.customCSS.css
@@ -735,7 +735,7 @@ button.inline-edit {
         margin: 20px 0;
     }
     
-    .text-input.with-1-line {
+    .text-input.with-1-line, input.search-input {
         height: 40px;
         line-height: 40px;
         text-indent: 10px;
@@ -750,6 +750,23 @@ button.inline-edit {
 
         width:calc( 33% - 7px );
         display:inline-block
+    }
+    
+    
+    
+    .search-bar-content {
+        margin-bottom: 50px;
+    }
+    
+    span.search-bar-btn.left.search {
+        font-size: 40px;
+        margin: 20px 0;
+        display: block;
+    }
+    
+    input.search-input {
+        width: 100%;
+        height: 40px;
     }
 
 
