administrator -- Auto Commit - Changes made through Frontend Interface

--- a/app/homeStyle.customCSS.css
+++ b/app/homeStyle.customCSS.css
@@ -153,6 +153,7 @@ $introTextColor:#4d8673;
             font-size: 35px;
             font-weight: 400;
             text-shadow: 0 0 7px white;
+            text-align: center;
         }
         
     }
