--- a/app/homeStyle.customCSS.css
+++ b/app/homeStyle.customCSS.css
@@ -526,7 +526,7 @@ button.inline-edit {
         background-color: deepskyblue;
     } 
     .content.browse:before{
-        background-image:url('https://nickolanackbucket.s3.us-west-2.amazonaws.com/sixties-scoop.geoforms.ca/1/Uploads/vdX_kNM_%5BG%5D_%5BImAgE%5D_Asg-%3Ethumb%3A%3E200x%3E150.png');
+        background-image:url('https://nickolanackbucket.s3.us-west-2.amazonaws.com/sixties-scoop.geoforms.ca/1/Uploads/[ImAgE]_KO1_[G]_3qM_dtw-%3Ethumb:%3E200x%3E150.png');
         background-color: mediumaquamarine;
     }
     
