--- a/app/homeStyle.customCSS.css
+++ b/app/homeStyle.customCSS.css
@@ -308,7 +308,7 @@ $introTextColor:#4d8673;
         right:450px;
         
         &:after{
-            background-image: url('https://nickolanackbucket.s3.us-west-2.amazonaws.com/sixties-scoop.geoforms.ca/1/Uploads/iYL_j5W_%5BImAgE%5D_mXx_%5BG%5D.png');
+            background-image: url('https://nickolanackbucket.s3.us-west-2.amazonaws.com/sixties-scoop.geoforms.ca/1/Uploads/%5BG%5D_0Zn_l8_ctO_%5BImAgE%5D-%3Ethumb%3A%3E200x%3E150.png');
             width: 235px;
             height: 80px;
             top: -90px;
