--- a/app/homeStyle.customCSS.css
+++ b/app/homeStyle.customCSS.css
@@ -778,6 +778,16 @@ button.inline-edit {
 
 
 
+.target-story [data-view="storyPageContent"] h1:first-child {
+    margin-top: 60px;
+}
+
+.target-story [data-view="storyPageContent"] h1:first-child > strong {
+    color: #3f3c3b;
+    font-weight: 400;
+}
+
+
 .target-story{
     
     
@@ -791,14 +801,26 @@ button.inline-edit {
             font-size: 30px;
             color:#3f3c3b;
             
-            margin-top: 60px;
-            
+
             &>strong {
               
                 margin-right: 30px;
                 font-size: 55px;
                 color: #2196f3;
             }
+            
+            &:first-child{
+                
+                margin-top: 60px;
+                
+                &>strong{
+                    
+                    color: #3f3c3b;
+                    font-weight: 400;
+                    
+                }
+            }
+            
         }
         
         
