administrator -- Auto Commit - Changes made through Frontend Interface

--- a/app/homeStyle.customCSS.css
+++ b/app/homeStyle.customCSS.css
@@ -995,5 +995,17 @@ button.inline-edit {
 }
 
 
+.content.admin-toggle p {font-size: 0;}
+
+.content.admin-toggle p:after {
+    content: "\0f044";
+    font-size: 16px;
+    font-family: 'FontAwesome';
+}
+
+.hide-admin .content.admin-toggle p:after{
+    
+}
+
 
 
