--- a/app/homeStyle.customCSS.css
+++ b/app/homeStyle.customCSS.css
@@ -898,6 +898,12 @@ button.inline-edit {
     }
 
 
+    .view-index-link {
+        text-align: right;
+        margin: 5px 50px;
+        font-weight: 400;
+        color: mediumaquamarine;
+    }
    
     
     
