--- a/app/homeStyle.customCSS.css
+++ b/app/homeStyle.customCSS.css
@@ -241,7 +241,8 @@ $introTextColor:#4d8673;
 
 
 
-     .ui-view.featured-stories, .intro-section, [data-view="searchPageContent"], [data-view="storyPageContent"]{
+     .ui-view.featured-stories, .intro-section, 
+     [data-view="searchPageContent"], [data-view="storyPageContent"], [data-view="storyIndexContent"]{
         width: 1000px;
         max-width: calc( 100% - 100px );
         margin: auto;
