--- a/app/homeStyle.customCSS.css
+++ b/app/homeStyle.customCSS.css
@@ -806,6 +806,31 @@ button.inline-edit {
 .target-story, .target-storyIndex{
     
     
+    .media-container.has-img {
+        float: left;
+        width: 150px;
+        height: 150px;
+        display: inline-block;
+        position: absolute;
+        top: 0;
+        right: 0;
+        border-radius: 5px;
+        overflow: hidden;
+        box-shadow: 0 0 3px rgba(0,0,0,0.3);
+        border: 3px solid white;
+        overflow: hidden;
+        
+        >span {
+            width: 100%;
+            height: 100%;
+            display: inline-block;
+            background-size: cover;
+        }
+    }
+    
+    
+    
+    
     [data-view="storyPageContent"], [data-view="storyIndexContent"]{
         
         h1 {
