administrator -- Auto Commit - Changes made through Frontend Interface

--- a/app/homeStyle.customCSS.css
+++ b/app/homeStyle.customCSS.css
@@ -1023,6 +1023,10 @@ button.inline-edit {
             margin-bottom: 0;
         }
         
+        &.story-card h2{
+             margin-top: 0;
+        }
+        
     }
     
     
