--- a/app/homeStyle.customCSS.css
+++ b/app/homeStyle.customCSS.css
@@ -1031,24 +1031,31 @@ button.inline-edit {
     }
     
     
-    .FormattedTextModule.content.description-field {
-        font-size: 17px;
-        font-weight: 100;
-        padding: 10px 0;
-        margin-bottom: 20px;
+    .FormattedTextModule.content{
+        .description-field {
+            font-size: 17px;
+            font-weight: 100;
+            padding: 10px 0;
+            margin-bottom: 20px;
+            
+           
+        }
         
-        &.empty{
-            font-size: 0;
-            margin-bottom: 0;
+        &.item-address, &.item-year {
+            font-weight: 400;
+            /* text-align: right; */
+            margin-right: 30%;
+        }
+        
+        
+         &.empty{
+                font-size: 0;
+                margin-bottom: 0;
         }
         
     }
     
-    .FormattedTextModule.content.item-address, .FormattedTextModule.content.item-year {
-        font-weight: 400;
-        /* text-align: right; */
-        margin-right: 30%;
-    }
+    
     
     
 }
