administrator -- Auto Commit - Changes made through Frontend Interface

--- a/app/homeStyle.customCSS.css
+++ b/app/homeStyle.customCSS.css
@@ -851,7 +851,7 @@ button.inline-edit {
         cursor:pointer;
         
         &:hover{
-            svg:hover {
+            svg {
                 filter: hue-rotate(190deg);
                 transition: filter 0.2s;
             }
