administrator -- Auto Commit - Changes made through Frontend Interface

--- a/app/homeStyle.customCSS.css
+++ b/app/homeStyle.customCSS.css
@@ -851,6 +851,8 @@ button.inline-edit {
         cursor:pointer;
         
         &:hover{
+            
+            filter: grayscale(0);
             svg {
                 filter: hue-rotate(190deg);
                 transition: filter 1s;
