--- a/app/homeStyle.customCSS.css
+++ b/app/homeStyle.customCSS.css
@@ -838,6 +838,8 @@ button.inline-edit {
         filter: grayscale(0.4);
         position: relative;
         
+        border: 3px solid white;
+        
         
         h2 {
             color: white;
