administrator -- Auto Commit - Changes made through Frontend Interface

--- a/app/homeStyle.customCSS.css
+++ b/app/homeStyle.customCSS.css
@@ -1146,6 +1146,16 @@ button.inline-edit {
         position: relative;
         top: -40px;
     }
+    
+    .ui-view.search-content {
+        display: none;
+    }
+    
+    .ui-view.search-content.enabled {
+        display: inline-block;
+    }
+        
+    
 }
 
 
