administrator -- Auto Commit - Changes made through Frontend Interface

--- a/app/homeStyle.customCSS.css
+++ b/app/homeStyle.customCSS.css
@@ -1152,7 +1152,7 @@ button.inline-edit {
     }
     
     .ui-view.search-content.enabled {
-        display: inline-block;
+        display: block;
     }
         
     
