--- a/app/homeStyle.customCSS.css
+++ b/app/homeStyle.customCSS.css
@@ -1142,6 +1142,12 @@ button.inline-edit {
         box-shadow: none;
     }
     
+    button.inline-edit.options-btn.enabled:after {
+        background-color: rgba(0,0,0,0.1);
+        box-shadow: 0 0 3px rgb(0 0 0 / 20%);
+        margin-left:5px;
+    }
+    
     button.inline-edit.options-btn {
         position: relative;
         top: -40px;
