--- a/app/homeStyle.customCSS.css
+++ b/app/homeStyle.customCSS.css
@@ -1151,6 +1151,7 @@ button.inline-edit {
     button.inline-edit.options-btn {
         position: relative;
         top: -40px;
+        cursor:pointer;
     }
     
     .ui-view.search-content {
