administrator -- Auto Commit - Changes made through Frontend Interface

--- a/app/homeStyle.customCSS.css
+++ b/app/homeStyle.customCSS.css
@@ -827,12 +827,27 @@ button.inline-edit {
 
 
 
+.search-result-list {
+    box-shadow: none;
+    
+    li>span {
+        height: unset;
+        
+        
+        .icon{
+            display: none;
+        }
+    }
+}
 
 
 
 
 
-.target-story, .target-storyIndex{
+
+
+
+.target-story, .target-storyIndex, .target-search{
     
     
     .media-container.has-img>.image{
