--- a/app/homeStyle.customCSS.css
+++ b/app/homeStyle.customCSS.css
@@ -1190,6 +1190,12 @@ button.inline-edit {
     }
 }
 
+.target-search .search-result-list li:nth-child(odd){ [data-view="sidePanelInfoDetail"]{
+    
+    background-color: rgba(0, 0, 0, 0.06);
+    
+}
+
 
 .hide-admin .admin-btn, .hide-admin .inline-edit {
     display:none
