administrator -- Auto Commit - Changes made through Frontend Interface

--- a/app/homeStyle.customCSS.css
+++ b/app/homeStyle.customCSS.css
@@ -1076,7 +1076,7 @@ button.inline-edit {
         
         
         
-        &.story-card {
+        &.story-card, &.result-clickable  {
             margin-left: 0;
             
             &:before, &:after {
