administrator -- Auto Commit - Changes made through Frontend Interface

--- a/app/homeStyle.customCSS.css
+++ b/app/homeStyle.customCSS.css
@@ -1073,6 +1073,9 @@ button.inline-edit {
         
         .small-video {
             position: unset;  
+            &:before{
+                display:none;
+            }
         }
         
         
