administrator -- Auto Commit - Changes made through Frontend Interface

--- a/app/homeStyle.customCSS.css
+++ b/app/homeStyle.customCSS.css
@@ -1295,6 +1295,7 @@ a.ui-view,.template-content a{
         content: "\0f066";
         font-family: 'FontAwesome';
         font-size: 20px;
+        color: #2096f3;
     }
 }
 
